--- a/.github/workflows/predict_rnn.yml
+++ b/.github/workflows/predict_rnn.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install tensorflow-cpu
           pip install -r requirements.txt
 
       - name: Run predict_rnn.py
