--- a/.github/workflows/predict_rnn.yml
+++ b/.github/workflows/predict_rnn.yml
@@ -1,42 +1,37 @@
-name: Prediction Workflow
+name: Run Predictions
 
 on:
-  schedule:
-    # Run at every 15 minutes from 9:15 AM to 3:30 PM IST (every Monday to Friday)
-    - cron: "*/3 3-9 * * 1-5"
   workflow_dispatch:
 
 jobs:
-  predict_rnn:
+  run-predictions:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tensorflow-cpu
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas numpy tensorflow scikit-learn
 
-      - name: Run predict_rnn.py
-        run: |
-          python predict_rnn.py
+    - name: Run prediction script
+      run: |
+        mkdir -p predictions
+        python predict_rnn.py
 
-      - name: Check if predictions.db exists
-        run: |
-          if [ -f "predictions/predictions.db" ]; then
-            echo "Prediction database found."
-            git config --global user.name "GitHub Actions"
-            git config --global user.email "github-actions@github.com"
-            git add predictions/predictions.db
-            git commit -m "Update prediction database"
-            git push
-          else
-            echo "No predictions.db file found, skipping commit"
-          fi
+    - name: Commit and push changes
+      run: |
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
+        git add predictions/*.db
+        git commit -m 'Update predictions database'
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
