--- a/.github/workflows/predict_rnn.yml
+++ b/.github/workflows/predict_rnn.yml
@@ -27,6 +27,7 @@ jobs:
         python predict_rnn.py
 
     - name: Commit and push changes
+      if: success() && steps.check-predictions.outputs.has_db_files == 'true'
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
@@ -35,3 +36,12 @@ jobs:
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Check for .db files in predictions directory
+      id: check-predictions
+      run: |
+        if ls predictions/*.db 1> /dev/null 2>&1; then
+          echo "::set-output name=has_db_files::true"
+        else
+          echo "::set-output name=has_db_files::false"
+        fi
