--- a/.github/workflows/predict_rnn.yml
+++ b/.github/workflows/predict_rnn.yml
@@ -1,30 +1,47 @@
-name: Run Prediction Script
+name: Run Predictions
 
 on:
-  workflow_dispatch: # Manual trigger
+  workflow_dispatch:
 
 jobs:
   run-predictions:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
-    # Step 2: Set up Python environment
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.9'
 
-    # Step 3: Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas numpy tensorflow
+        pip install pandas numpy tensorflow scikit-learn
 
-    # Step 4: Run the prediction script
-    - name: Run Prediction Script
+    - name: Run prediction script
       run: |
+        mkdir -p predictions
         python predict_rnn.py
+
+    - name: Check for .db files in predictions directory
+      id: check-predictions
+      run: |
+        if ls predictions/*.db 1> /dev/null 2>&1; then
+          echo "::set-output name=has_db_files::true"
+        else
+          echo "::set-output name=has_db_files::false"
+        fi
+
+    - name: Commit and push changes
+      if: success() && steps.check-predictions.outputs.has_db_files == 'true'
+      run: |
+        git config --global user.name 'github-actions'
+        git config --global user.email 'github-actions@github.com'
+        git add predictions/*.db
+        git commit -m 'Update predictions database'
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
