--- a/.github/workflows/predict_rnn.yml
+++ b/.github/workflows/predict_rnn.yml
@@ -42,6 +42,7 @@ jobs:
         git config --global user.email 'github-actions@github.com'
         git add predictions/*.db
         git commit -m 'Update predictions database'
+        git pull --rebase
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
