--- a/.github/workflows/combined_workflow.yml
+++ b/.github/workflows/combined_workflow.yml
@@ -109,6 +109,7 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git add temp_csv/*.csv nifty50_data_v1.db
           git commit -m "Download Nifty50 data, store to DB, and update CSVs"
+          git pull --rebase origin main
           git push origin main
 
   predict_rnn:
